test/runtime/fail/runtime/call_nil.hy

// expect error: Attempt to call nil

let a = nil
a()
